# flight_prediction

./: .gitignore  README.md  pyproject.toml
notebooks/: EDA1.ipynb  EDA2.ipynb
src/flight_delay/: __init__.py
src/flight_delay/ingestion/: __init__.py  bts.py
src/flight_delay/transform/: __init__.py  convert.py
